{
  "version": 4,
  "terraform_version": "0.12.25",
  "serial": 10,
  "lineage": "07605d4a-e0c0-290e-6dcc-bb96ed8c0668",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "example",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-54d2a63b",
            "arn": "arn:aws:ec2:ap-south-1:195636074613:instance/i-05beaf7a1b4738fd1",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05beaf7a1b4738fd1",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-003157065dcaa6aaa",
            "private_dns": "ip-10-0-1-68.ap-south-1.compute.internal",
            "private_ip": "10.0.1.68",
            "public_ip": "15.206.70.99",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 200,
                "volume_id": "vol-032c96da7201972fb",
                "volume_size": 8,
                "volume_type": "io1"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03efc208c2bfd5257",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ba9e7ca8b2759e7a"
            ]
          },
          "dependencies": [
            "aws_security_group.allow-ssh",
            "aws_subnet.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main-gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0609fb85aa0184a2a",
            "owner_id": "195636074613",
            "tags": {
              "Name": "main"
            },
            "vpc_id": "vpc-05646592a083c57ba"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-04b1b0e362558aa56",
            "owner_id": "195636074613",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0609fb85aa0184a2a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-1"
            },
            "vpc_id": "vpc-05646592a083c57ba"
          },
          "dependencies": [
            "aws_internet_gateway.main-gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-public-1-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00b8066cd9de25263",
            "route_table_id": "rtb-04b1b0e362558aa56",
            "subnet_id": "subnet-03efc208c2bfd5257"
          },
          "dependencies": [
            "aws_internet_gateway.main-gw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:195636074613:security-group/sg-0ba9e7ca8b2759e7a",
            "description": "security group that allows ssh and all egress traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ba9e7ca8b2759e7a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow-ssh",
            "name_prefix": null,
            "owner_id": "195636074613",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow-ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-05646592a083c57ba"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:195636074613:subnet/subnet-03825446072c517ef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-03825446072c517ef",
            "map_public_ip_on_launch": false,
            "owner_id": "195636074613",
            "tags": {
              "Name": "private"
            },
            "vpc_id": "vpc-05646592a083c57ba"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:195636074613:subnet/subnet-03efc208c2bfd5257",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-03efc208c2bfd5257",
            "map_public_ip_on_launch": true,
            "owner_id": "195636074613",
            "tags": {
              "Name": "public"
            },
            "vpc_id": "vpc-05646592a083c57ba"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:195636074613:vpc/vpc-05646592a083c57ba",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04bcd76a59a3f38df",
            "default_route_table_id": "rtb-072a7d70d7668a9a4",
            "default_security_group_id": "sg-0a3118e9cf1ef4a9a",
            "dhcp_options_id": "dopt-d8b64fb3",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-05646592a083c57ba",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-072a7d70d7668a9a4",
            "owner_id": "195636074613",
            "tags": {
              "Name": "main"
            }
          }
        }
      ]
    }
  ]
}